# patcolour

./: README.md  pyproject.toml
src/patcolour/: __init__.py  cli.py  filter.py
